--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "assert": "^2.0.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
-    "express": "^4.17.1",
     "mocha": "^8.3.0",
     "supertest": "^6.1.3"
   }
