--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "pug": "^3.0.0"
+  },
+  "devDependencies": {
     "assert": "^2.0.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
-    "express": "^4.17.1",
     "mocha": "^8.3.0",
-    "node-fetch": "^2.6.1",
-    "pug": "^3.0.0",
     "supertest": "^6.1.3"
   }
 }
